# libdan

./: .gitignore  CMakeLists.txt  COPYING  NOTICE  PCU.c  PCU.h  README  dan.c  dan.h  dan_aa.c  dan_aa.h  dan_bsp.c  dan_bsp.h  dan_buffer.c  dan_buffer.h  dan_check.c  dan_circle.c  dan_circle.h  dan_line.c  dan_line.h  dan_list.c  dan_list.h  dan_matrix.c  dan_matrix.h  dan_memory.c  dan_memory.h  dan_mpi.c  dan_mpi.h  dan_natural.h  dan_neighbor.c  dan_neighbor.h  dan_pmsg.c  dan_pmsg.h  dan_point.c  dan_point.h  dan_scalar.c  dan_scalar.h  dan_set.c  dan_set.h  dan_vector.c  (+1 more)
test/: aa.c  bsp.c  mpi_ibarrier.c  pmsg.c  set.c
